# github_committer

./: .gitignore  changes  main.py  make_commits.sh  pyproject.toml
.github/workflows/: ci.yml
