[tool.poetry]
name = "github-committer"
version = "0.1.0"
description = ""
authors = ["Alekei Grachev <ax66@bk.ru>"]
readme = "README.md"
packages = [{include = "github_committer"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
